[package]
version = "0.0.1"
name = "process_execution"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]

[dependencies]
bazel_protos = { path = "bazel_protos" }
digest = "0.6.2"
grpcio = { git = "https://github.com/illicitonion/grpc-rs", rev = "42f18eded3060983dbd65b01389569cd61842782" }
protobuf = "1.4.1"
sha2 = "0.6.0"
