[package]
version = "0.0.1"
name = "process_executor"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]

[dependencies]
bazel_protos = { path = "bazel_protos" }
digest = "0.6.2"
grpcio = { git = "https://github.com/illicitonion/grpc-rs", rev = "6562bb52b815bacf4e3eabdc46e4a7354e6ae0b9" }
protobuf = "1.4.1"
sha2 = "0.6.0"
